resources/sass/site2.scss
/* ... */
.project-settings-section {
  display: inherit;
  flex-flow: inherit;
  margin: 0 0 50px;

  .step-header {
    h2 {
      margin-bottom: 0;
    }
  }

  .mdc-select {
    margin-top: 16px;
    margin-bottom: 10px;
  }

  .no-provider-set-selected {
    color: rgba(0, 0, 0, 0.6);
    margin: 25px 0 0;
  }
}

.project-settings-actions {
  text-align: right;

  padding: 25px 35px;
  border-top: 1px solid #e0e0e0;

  button {
    margin-left: 25px;
  }
}

.empty-list-container {
  position: relative;
  width: 100%;

  .empty-list {
    color: #AAA;
    font-size: 24px;
    position: absolute;
    text-align: center;
    top: 50%;
    transform: translateY(-50%);
    width: 100%;

    button {
      background: transparent;
      color: $mdc-theme-primary;
      font-size: 26px;
      font-weight: 400;
      text-transform: inherit;
    }
  }
}

.invalid-input{
  @include mdc-text-field-ink-color(#FF5722)
}

.disable-a{
  text-decoration: none;
}

.center-download-icon{
  margin-bottom: 15px;
  margin-top: 15px;
  margin-left: 16px;
  margin-right: 15px;
}

.project-setting{
  width: 554px;
}

.action-input{
  width: 110px;
}

//empty projects

.md-icon-96 {
  font-size: 96px !important;
}
.message-margin{
 margin-bottom: 7px;
}
.crosshair-pointer {
  cursor: crosshair;
}

.info-computing-best-location {
  background-color: #404040;
  margin: 7px 15px;
  padding: 7px 10px;
  color: #FFF;
  font-weight: 500;
}

.border-btn-floating {
    position: absolute;
    right: 1rem;
    margin-top: -2.5rem;
    z-index: 2;
    border-radius: 50%;
    padding: 3px;

    .btn-floating {
        z-index: 2;
        border: 1px solid #FFF;
        box-shadow: none;
    }
}

.border-btn-floating-animated {
    background: linear-gradient(0deg, #ff7710, #FFF, #FFF);
    animation: rotate-background .5s ease 1 forwards;

    animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -webkit-animation-iteration-count: infinite;
    -o-animation-iteration-count: infinite;
}

@keyframes rotate-background {
  0% {
    background: linear-gradient(0deg, #ff7710 , #FFF, #FFF);
  }
  12% {
    background: linear-gradient(45deg, #ff7710 , #FFF, #FFF);
  }
  25% {
    background: linear-gradient(90deg, #ff7710 , #FFF, #FFF);
  }
  37% {
    background: linear-gradient(135deg, #ff7710 , #FFF, #FFF);
  }
  50% {
    background: linear-gradient(180deg, #ff7710 , #FFF, #FFF);
  }
  62% {
    background: linear-gradient(225deg, #ff7710 , #FFF, #FFF);
  }
  75% {
    background: linear-gradient(270deg, #ff7710 , #FFF, #FFF);
  }
  82% {
    background: linear-gradient(315deg, #ff7710 , #FFF, #FFF);
  }
  100% {
    background: linear-gradient(360deg, #ff7710 , #FFF, #FFF);
  }
}
.raise-alert{
  background-color: #ff561c;
  padding: 4px;
  margin-top: 32px;

  @include mdc-elevation(4);
    &:hover {
      border: 1px dashed #ff561c;
      background-color:  #ff7710;
    }
  }

.card-message{
    background-color: #FFF;
    $card-radius: 4px;
    @include mdc-elevation(1);
    @extend .mdc-elevation-transition;
    justify-content: center;

    .content {
      padding:16px;
    }
    .bottom-button{
      width: 100%;
    }
}

.leaflet-square-icon-gray {
  border: 1px solid rgba(211, 211, 211, 0.53) !important;
  background: rgba(189, 187, 187, 0.447);
  }

.leaflet-square-icon-green {
  border: 1px solid rgb(192, 233, 156) !important;
  background: rgb(129, 203, 83);
  }

.leaflet-square-icon-yellow {
  border: 1px solid lightgoldenrodyellow !important;
  background: yellow;
}

.leaflet-square-icon-orange {
  border: 1px solid rgb(245, 208, 140) !important;
  background: orange;
}

.leaflet-square-icon-red{
  border: 1px solid lightcoral !important;
  background: red ;
}

.leaflet-circle-icon-gray {
  background-color: gray;
  border-radius: 50%;
}
.leaflet-circle-icon-orange {
  background-color: orange;
  border-radius: 50%;;
}

.leaflet-circle-icon-red{
  background-color: red;
  border-radius: 50%;;
  }

.leaflet-circle-icon-blue{
  background-color: blue;
  border-radius: 50%;;
  }

.leaflet-circle-for-change{
  border: 3px solid rgba(255, 255, 255, 0.756) !important;
}
.show-static-text {
  width: 50%;
}

.inline {
  display: inline-grid;
}

.text-helper {
  font-size: 12px;
}

.scenario-settings {
  margin-left: 18rem;
  button {
    padding: 6px;
  }
}

.options-menu {
   padding: 10px;
}

.loader {
  position: absolute;
  left: 50%;
  top: 50%;
  z-index: 1;
  border: 6px solid #f5f5f5;
  border-top: 6px solid   #ff7710;
  border-radius: 50%;
  width: 42px;
  height: 42px;
  -webkit-animation: spin 2s linear infinite;
  animation: spin 2s linear infinite;
}

.wizard {
  .steps {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    border-bottom: 1px solid rgba(0,0,0,0.1);
    margin-left: -25px;
    margin-right: -25px;
    padding: 5px 20px 0;
    height: 56px;

    > a {
      text-decoration: none;
      text-transform: capitalize;
      i {
        background-color: #999999;        
        color: #ffffff;
        font-style: normal;
        padding: 5px 11px;
        margin-right: 10px;
        border-radius: 50%;
      }
      div {
        color: #999999;
        display: inline-block;
        &:after {
          content: "";
          position: absolute;
          height: 12px;
          min-width: 85px;
          margin-left: 10px;
          border-bottom: 1px solid rgba(0,0,0,0.1);
        }
      }
      &:last-child div:after {
        border: none;
      }
    }
    
    .complete {
      i {
        background-color: $mdc-theme-primary;
      }
      div {
        color: #000000;
      }
    }
    .active {
      @extend .complete;
      font-weight: 500;
    }
  }
  .map {
    min-height: 500px;
    height: 100%;
  }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

